Feat(AI): integracion del microservicio de ai
